--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,54 +1,45 @@
-/* variables */
-
 /* universal */
 body {
   margin: 0;
   padding: 0;
 }
 
-.container {
-  display: block;
-  position: relative;
-  top: 5em;
-  max-width: 85%;
-  margin: 0 auto;
+ul {
+  list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
 
 /* navigation */
-.topnav {
-  background-color: #111;
+.topnav  {
   overflow: hidden;
-  width: 100%;
-  .icon {
-    display: none;
-  }
-  a {
+  background-color: #333;
+  li {
     float: left;
-    display: block;
-    color: #fff;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    &:hover {
-      background-color: #ddd;
-      color: #000;
+    a {
+      display: block;
+      color: #fff;
+      text-align: center;
+      padding: 14px 16px;
+      &:hover:not(.active) {
+        background-color: #111;
+      }
+      .active {
+        background-color: #4caf50;
+      }
+    }
+    .right {
+      float: right;
     }
   }
 }
 
-
-/* Media Queries */
+/* media queries */
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) { display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav.responsive a {
+  .topnav .right,
+  .topnav li {
     float: none;
-    display: bock;
-    text-align: left;
   }
 }
