--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,5 @@
 <div class="topnav" id="myTopnav">
-  <%= render 'layouts/navigation' %>
+  <div class="topnav-links">
+    <%= render 'layouts/navigation' %>
+  </div>
 </div>
