--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 ul {
@@ -12,34 +13,60 @@ a {
   text-decoration: none;
 }
 
+.container {
+  max-width: 85%;
+  position: relative;
+  margin: 0 auto;
+}
+
 /* navigation */
-.topnav  {
+.topnav {
   overflow: hidden;
   background-color: #333;
-  li {
+  width: 100%;
+  display: block;
+  margin: 0;
+  padding: 0;
+  a {
     float: left;
-    a {
-      display: block;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 17px;
+    &:hover {
+      background-color: #111;
       color: #fff;
-      text-align: center;
-      padding: 14px 16px;
-      &:hover:not(.active) {
-        background-color: #111;
-      }
-      .active {
-        background-color: #4caf50;
-      }
-    }
-    .right {
-      float: right;
     }
   }
 }
 
-/* media queries */
+.topnav a.icon {
+  display: none;
+  font-size: 25px;
+}
+
+.topnav-links {
+  float: right;
+  margin: 0 2em 0 0;
+}
+
+// navigation media queries
 @media screen and (max-width: 600px) {
-  .topnav .right,
-  .topnav li {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .topnav.responsive a {
     float: none;
+    display: block;
+    text-align: left;
   }
 }
