--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,4 +2,4 @@
 <%= link_to "Gallery", '#' %>
 <%= link_to "About", '#' %>
 <%= link_to "Contact", '#' %>
-<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+<a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
