--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', "https://fonts.googleapis.com/css?family=PT+Serif:400,400i|Raleway:400,700,900i" %>
+    <%= stylesheet_link_tag    'application', "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'custom.js' => true %>
+    <!-- <%= javascript_include_tag 'application', 'custom.js' => true %> -->
   </head>
 
   <body>
