--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -50,7 +50,7 @@ a {
     padding: 14px 16px;
     font-size: 17px;
     &:hover {
-      background-color: #111;
+
       color: #fff;
     }
   }
@@ -60,6 +60,7 @@ a {
   display: none;
   font-size: 25px;
   font-family: FontAwesome;
+  transition: .35s ease;
   &:after {
     content: "\f047";
   }
@@ -89,8 +90,9 @@ a {
     float: none;
     display: block;
     text-align: left;
-    &:last-child::after {
-      content: "\f0b2";
+    transition: .35s ease;
+    &:last-child {
+      transform: rotate(-45deg);
     }
   }
 }
