--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -32,6 +32,20 @@ a {
   max-width: 85%;
   position: relative;
   margin: 0 auto;
+  /* temporarily fit height to vh */
+  height: 100vh;
+}
+
+.footer {
+  width: 100%;
+  clear: both;
+  display: block;
+  border-top: 1px dotted #eae;
+  small {
+    font-family: $header;
+    color: #888;
+    display: inline;
+  }
 }
 
 /* navigation */
