--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -8,10 +8,15 @@
 $header: 'Raleway', sans-serif;
 $body: 'PT Serif', serif;
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  min-height: 100%;
+  padding-bottom: 80px;
   font: 16px/1.2em $body;
 }
 
@@ -34,18 +39,15 @@ a {
   max-width: 85%;
   position: relative;
   margin: 0 auto;
+  &:after {
+    content: "";
+    clear: both;
+    display: block;
+  }
 }
 
-.footer {
-  width: 100%;
-  clear: both;
-  display: block;
-  border-top: 1px dotted #eae;
-  small {
-    font-family: $header;
-    color: #888;
-    display: inline;
-  }
+#logo {
+  text-transform: uppercase;
 }
 
 /* navigation */
@@ -53,9 +55,21 @@ a {
   overflow: hidden;
   background-color: #333;
   width: 100%;
+  box-sizing: inherit;
   display: block;
   margin: 0;
   padding: 0;
+  .logo {
+      float: left;
+      position: relative;
+      color: #fff;
+      font-size: 1.7em;
+      letter-spacing: 1px;
+      font-weight: bold;
+      @media screen and (max-width: 600px) {
+        display: none;
+      }
+    }
   a {
     float: left;
     display: block;
@@ -64,7 +78,6 @@ a {
     padding: 14px 16px;
     font-size: 17px;
     &:hover {
-
       color: #fff;
     }
   }
@@ -104,7 +117,6 @@ a {
     float: none;
     display: block;
     text-align: left;
-    transition: .35s ease;
     &:last-child {
       transform: rotate(-45deg);
     }
