--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
 <div class="topnav" id="myTopnav">
+  <h1 class="logo">Space Bubbles</h1>
   <div class="topnav-links">
     <%= render 'layouts/navigation' %>
   </div>
