--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
     <%= stylesheet_link_tag    'application', "https://fonts.googleapis.com/css?family=PT+Serif:400,400i|Raleway:400,700,900i" %>
     <%= stylesheet_link_tag    'application', "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="canonical" href="/items" />
+    <link rel="next" href="/items?page=2" />
+
+    <script>initPaginator();</script>
   </head>
 
   <body>
