--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,8 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
       <%= yield %>
-    </div>
-
+  <%= render 'layouts/footer' %>
+  <%= render 'layouts/paginator_url' %>
   </body>
 </html>
