Delete some stuff, add some stuff, edit some stuff
then commit some stuff

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,9 @@
-<%= link_to "Home", '#' %>
-<%= link_to "Gallery", '#' %>
-<%= link_to "About", '#' %>
-<%= link_to "Contact", '#' %>
-<a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
+<nav>
+  <div class="container">
+    <%= link_to "Space Bubbles", '#', id: "logo" %>
+  </div>
+  <ul>
+    <li class="sub-nav-parent">
+    </li>
+  </ul>
+</nav>
