--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,7 +3,7 @@
 // universal fonts
 @import url('https://fonts.googleapis.com/css?family=PT+Serif:400,400i|Raleway:400,700,900i');
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
-@import 'gallery';
+@import 'navigation';
 
 $header: 'Raleway', sans-serif;
 $body: 'PT Serif', serif;
@@ -54,87 +54,16 @@ footer {
 }
 .container {
   max-width: 85%;
-  position: relative;
+  padding: 0;
   margin: 0 auto;
-  &:after {
-    content: "";
-    clear: both;
-    display: block;
+  @media screen and (max-width: 600px) {
+    max-width: 90%;
   }
 }
 
 #logo {
   text-transform: uppercase;
-}
-
-/* navigation */
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  width: 100%;
-  display: block;
-  margin: 0;
-  padding: 0;
-  .logo {
-      float: left;
-      position: relative;
-      color: #fff;
-      font-size: 1.7em;
-      letter-spacing: 1px;
-      font-weight: bold;
-      @media screen and (max-width: 600px) {
-        display: none;
-      }
-    }
-  a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    font-size: 17px;
-    &:hover {
-      color: #fff;
-    }
-  }
-}
-
-.topnav a.icon {
-  display: none;
-  font-size: 25px;
-  font-family: FontAwesome;
-  transition: .35s ease;
-  &:after {
-    content: "\f047";
-  }
-}
-
-.topnav-links {
-  float: right;
-}
-
-// navigation media queries
-@media screen and (max-width: 600px) {
-  .topnav-links {
-    float: none;
-  }
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-    &:last-child {
-      transform: rotate(-45deg);
-    }
+  @media screen and (max-width: 600px) {
+    font-size: .7rem;
   }
 }
