--- a/app/assets/stylesheets/_navigation.scss
+++ b/app/assets/stylesheets/_navigation.scss
@@ -1,63 +1,43 @@
 nav {
-  width: 100%;
-  display: block;
   background: #000;
-  position: absolute;
-  top: 0;
-  overflow: hidden;
-  ul {
-    float: right;
-    position: relative;
-    line-height: 2em;
-    li {
-      margin-right: 1.2em;
-    }
+  width: 100%;
+  height: 75px;
+  margin: 0;
+  padding: 0;
+  display: block;
+  position: fixed;
   }
   a {
     color: #fff;
   }
-  .icon {
-    font: 1.5rem FontAwesome;
-    display: none;
-    &:after {
-      content: "\f047";
-      position: relative;
-      z-index: 1;
-      top: 0;
-      right: 1.2em;
-      float: right;
-    }
-    @media screen and (max-width: 600px) {
-      display: inline;
-    }
-  }
-}
-.sub-nav-parent {
-  position: relative;
-  &:hover .sub-menu {
-    visibility: visibile;
-    opacity: 1;
-    z-index: 1;
-    transform: translateY(0%);
-    transition-delay: 0s, 0s, .3s;
-  }
-}
-.sub-nav {
-  position: absolute;
-  top: 0;
-  transform: translateY(4em);
-  width: 100%;
-  z-index: -1;
-  transition: all .3s ease-in-out 0s, visibility 0s linear .3s, z-index 0s linear .01s;
-}
-
-@media screen and (max-width: 600px) {
-  .sub-nav.responsive {
+  ul {
+    float: right;
     position: relative;
-    background: #ddd;
-  }
-  .sub-nav.responsive a {
-    display: block;
-    color: #111;
+    top: .25em;
+    li {
+      display: inline;
+      right: .2em;
+      margin-right: 1em;
+      &:not(:first-child) {
+        @media screen and (max-width: 600px) {
+          display: none;
+        }
+      }
+    }
+
+    // icon
+    .icon {
+      display: none;
+      font: 2em "FontAwesome";
+      float: right;
+      &:after {
+        content: "\f053";
+      }
+      @media screen and (max-width: 600px) {
+        display: inline;
+        margin: 0 .65em;
+      }
+    // end icon
+
   }
 }
