--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,12 +1,9 @@
-<nav id="myTopnav">
-  <div class="container">
-    <%= link_to "Space Bubbles", '#', id: "logo" %>
-  </div>
+<nav>
+  <%= link_to "Space Bubbles", '#', id: "logo" %>
   <ul>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
-    <li class="sub-nav-parent">
+    <li class="sub-nav-parent" id="myTopnav">
       <ul class="sub-nav">
-        <li><%= link_to "Home", '#' %></li>
+        <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"></a></li>
         <li><%= link_to "Gallery", '#' %></li>
         <li><%= link_to "About", '#' %></li>
         <li><%= link_to "Contact", '#' %></li>
